# break-the-coupling-cpp

./: CMakeLists.txt  README.md
.github/workflows/: examples-ci.yml
di_factory/: CMakeLists.txt  di_factory_main.cpp
di_factory/camera_power_controller/: CMakeLists.txt
di_factory/camera_power_controller/include/: CameraPowerController.h
di_factory/camera_power_controller/src/: CameraPowerController.cpp
di_factory/serial_port_manager_factories/: CMakeLists.txt
di_factory/serial_port_manager_factories/asio_serial_port_manager_factory/include/: AsioSerialPortManagerFactory.h
di_factory/serial_port_manager_factories/asio_serial_port_manager_factory/src/: AsioSerialPortManagerFactory.cpp
di_factory/serial_port_manager_factories/public/: SerialPortManagerFactory.h
di_factory/serial_port_managers/: CMakeLists.txt
di_factory/serial_port_managers/asio_serial_port_manager/: CMakeLists.txt
di_factory/serial_port_managers/asio_serial_port_manager/include/: AsioSerialPortManager.h
di_factory/serial_port_managers/asio_serial_port_manager/src/: AsioSerialPortManager.cpp
di_factory/serial_port_managers/public/: SerialPortManager.h
di_factory/test/: CMakeLists.txt  DiFactoryCameraPowerControllerTest.cpp
di_factory/test/mocks/: MockSerialPortManager.h  MockSerialPortManagerFactory.h
di_polymorphism/: CMakeLists.txt  di_polymorphism_main.cpp
di_polymorphism/camera_power_controller/: CMakeLists.txt
di_polymorphism/camera_power_controller/include/: CameraPowerController.h
di_polymorphism/camera_power_controller/src/: CameraPowerController.cpp
di_polymorphism/serial_port_adapters/: CMakeLists.txt
di_polymorphism/serial_port_adapters/asio_serial_port_adapter/include/: AsioSerialPortAdapter.h
di_polymorphism/serial_port_adapters/asio_serial_port_adapter/src/: AsioSerialPortAdapter.cpp
di_polymorphism/serial_port_adapters/public/: SerialPortAdapter.h
di_polymorphism/test/: CMakeLists.txt  DiPolymorphismCameraPowerControllerTest.cpp
di_polymorphism/test/mocks/: MockSerialPortAdapter.h
di_template/: CMakeLists.txt  di_template_main.cpp
di_template/camera_power_controller/: CMakeLists.txt
di_template/camera_power_controller/include/: CameraPowerController.h
di_template/test/: CMakeLists.txt  DiTemplateCameraPowerControllerTest.cpp
link_switch/: CMakeLists.txt  link_switch_main.cpp
link_switch/camera_power_controller/: CMakeLists.txt
link_switch/camera_power_controller/include/: CameraPowerController.h
link_switch/camera_power_controller/src/: CameraPowerController.cpp
link_switch/test/: CMakeLists.txt  LinkSwitchCameraPowerControllerTest.cpp
link_switch/test/mocks/: AsioSerialPortManager.cpp  MockAsioSerialPortManager.h
link_switch_template/: CMakeLists.txt  link_switch_template_main.cpp
link_switch_template/camera_power_controller/: CMakeLists.txt
link_switch_template/camera_power_controller/include/: CameraPowerController.h
link_switch_template/test/: CMakeLists.txt  LinkSwitchTemplateCameraPowerControllerTest.cpp
original_code/: CMakeLists.txt
original_code/AsioSerialPortManager/: CMakeLists.txt
original_code/AsioSerialPortManager/include/: AsioSerialPortManager.h
src/: CMakeLists.txt
src/camera_power_controller/: CMakeLists.txt
src/camera_power_controller/include/: CameraPowerController.h
src/camera_power_controller/src/: CameraPowerController.cpp
src/libraries/AsioSerialPortManager/: CMakeLists.txt
src/libraries/AsioSerialPortManager/include/: AsioSerialPortManager.h
src/libraries/AsioSerialPortManager/src/: AsioSerialPortManager.cpp
src/libraries/ProductVariant/: CMakeLists.txt
src/libraries/ProductVariant/include/: ProductVariant.h
test/: CMakeLists.txt
