# ========= Unit test configurations =========
set(mocks ${CMAKE_CURRENT_SOURCE_DIR}/mocks)

# DummyTest
#add_executable(dummy_test ${unit_tests}/DummyTest.cpp)
#target_include_directories(dummy_test PUBLIC
#        ${include_dir}
#        ${mocks})
#target_link_libraries(dummy_test libdummy)
#configure_test(dummy_test)
