# LinkSwitchTemplateCameraPowerControllerTest
add_executable(link_switch_template_camera_power_controller_test LinkSwitchTemplateCameraPowerControllerTest.cpp)
target_link_libraries(link_switch_template_camera_power_controller_test
        link_switch_template_camera_power_controller
        mock_asio_serial_port_manager)
configure_test(link_switch_template_camera_power_controller_test)
